--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -105,11 +105,9 @@ button:hover {
 }
 
 footer {
-  background-color: #282c34;
-  color: white;
-  padding: 10px 0;
+  flex-shrink: 0;
+  background-color: #0c2844;
+  color: #f5f5f5;
+  padding: 1rem;
   text-align: center;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
